feat: basic server side down