@@ -5,14 +5,13 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
-import org.springframework.security.core.userdetails.UserDetails;
 
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
 import java.security.Key;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
+import java.util.Base64;
 import java.util.Date;
 
 /**
@@ -22,7 +21,7 @@ import java.util.Date;
  * @version 2023/8/29
  */
 public class JWTUtils {
-    private static final String SECRET_KEY = "secret_slot";
+    private static final String SECRET_KEY = "Uq23ZsDB46N8G47LRQ62XiPLRi";
     private static final Duration DEFAULT_EXPIRATION = Duration.of(2, ChronoUnit.HOURS);
 
     private static final SignatureAlgorithm SIGNATURE_ALGORITHM_HS256 = SignatureAlgorithm.HS256;
@@ -31,16 +30,16 @@ public class JWTUtils {
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
 
     static {
-        byte[] apiKeySecretBytes = DatatypeConverter.parseBase64Binary(SECRET_KEY);
+        byte[] apiKeySecretBytes = Base64.getEncoder().encode(SECRET_KEY.getBytes());
         SIGNING_KEY = new SecretKeySpec(apiKeySecretBytes, SIGNATURE_ALGORITHM_HS256.getJcaName());
     }
 
-    public static String createToken(UserDetails userDetails) {
-        return createToken(userDetails, DEFAULT_EXPIRATION);
+    public static String createToken(Object subject) {
+        return createToken(subject, DEFAULT_EXPIRATION);
     }
 
-    public static String expired(UserDetails userDetails) {
-        return createToken(userDetails, Duration.ZERO);
+    public static String expired(Object subject) {
+        return createToken(subject, Duration.ZERO);
     }
 
     public static String createToken(Object subject, Duration expiration) {
@@ -49,7 +48,7 @@ public class JWTUtils {
                     .setSubject(OBJECT_MAPPER.writeValueAsString(subject))
                     .setIssuedAt(Date.from(Instant.now()))
                     .setExpiration(Date.from(Instant.now().plus(expiration)))
-                    .signWith(SIGNATURE_ALGORITHM_HS256, SIGNING_KEY)
+                    .signWith(SIGNING_KEY)
                     .compact();
         } catch (JsonProcessingException e) {
             throw new RuntimeException(e);
@@ -57,12 +56,12 @@ public class JWTUtils {
     }
 
     public static Claims getPayload(String jwt) {
-        return Jwts.parser().setSigningKey(SIGNING_KEY).parseClaimsJws(jwt).getBody();
+        return Jwts.parserBuilder().setSigningKey(SIGNING_KEY).build().parseClaimsJws(jwt).getBody();
     }
 
-    public static UserDetails getUserDetails(String jwt) {
+    public static <T> T getSubject(String jwt, Class<T> tClass) {
         try {
-            return OBJECT_MAPPER.readValue(getPayload(jwt).getSubject(), UserDetails.class);
+            return OBJECT_MAPPER.readValue(getPayload(jwt).getSubject(), tClass);
         } catch (JsonProcessingException e) {
             throw new RuntimeException(e);
         }
